add username for query
